# home-ai-distributed

./: .directory  .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/Modules/: FindCAF.cmake
source/: main.cpp
